<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StopwatchAndTimer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_show_notification">ShowNotification</string>
    <string name="timer_label">00:00:000</string>
    <string name="start">Start</string>
    <string name="Pause">Pause</string>
    <string name="Reset">Reset</string>
    <string name="stop_timer">Stop</string>
    <string name="timerHintText">Set the start time in seconds...</string>
    <string name="title_section_stopwatch">Stopwatch</string>
    <string name="title_section_timer">Timer</string>
    <string name="timerReset">Select a new value</string>
    <string name="doneText">Finnished</string>

</resources>
