<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/stopwatch_value"
        android:text="@string/timer_label"
        android:textSize="80sp"
        android:textColor="#00FF00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:paddingTop="10dp" />



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="92dp"
        android:paddingTop="30dp">

        <Button
            android:id="@+id/start_stopwatch_button"
            android:text="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startStopwatch"
            android:layout_weight="1"
            android:background="#FFFFFF"
            />

        <Button
            android:id="@+id/stop_stopwatch_button"
            android:text="@string/Pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="stopStopwatch"
            android:layout_weight="1"
            android:background="#FFFFFF"/>

        <Button
            android:id="@+id/reset_stopwatch_button"
            android:text="@string/Reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="resetStopwatch"
            android:layout_weight="1"
            android:background="#FFFFFF"/>
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lapListView"/>




</LinearLayout>